# libdvid-cpp

./: .gitignore  .travis.yml  BinaryData.h  CMakeLists.txt  DVIDConnection.html  DVIDException.h  DVIDNode.cpp  DVIDNode.h  DVIDNodeService.html  DVIDServer.cpp  DVIDServer.h  DVIDServerService.html  DVIDVoxels.h  LICENSE.txt  README.md  Utilities.h  compile_against_conda.sh  configure-for-conda.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js  todo
_sources/: DVIDConnection.txt  DVIDNodeService.txt  index.txt
cmake_usage/: README.md
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml  run_test.py
config/: libdvidcppConfig.cmake.in  libdvidcppConfigVersion.cmake.in
example/: CMakeLists.txt  libdvid_example.cpp
include/: DVIDException.h  DVIDVoxels.h  Utilities.h
libdvid/: Algorithms.h  BinaryData.h  DVIDBlocks.h  DVIDCache.h  DVIDConnection.h  DVIDException.h  DVIDGraph.h  DVIDLabelCodec.h  DVIDNode.h  DVIDNodeService.h  DVIDRoi.h  DVIDServer.h  DVIDServerService.h  DVIDThreadedFetch.h  DVIDVoxels.h  Globals.h  Utilities.h
load_tests/: ScopeTime.h  copypaste_bodies.cpp  extract_sparse_body.cpp  loadtest_labelblk.cpp  loadtest_labelgraph.cpp  loadtest_sparsegray.cpp  loadtest_tile.cpp
load_tests/results/: labelblk.emdata1.results  labelblk.emrecon42.results  labelblk.local.results  labelgraph.local.results  labeltile.1024.emdata2.results  labeltile.1024.emrecon100.results  labeltile.512.emrecon100.results
png++/: config.hpp  convert_color_space.hpp  image.hpp  pixel_buffer.hpp  png.hpp
python/: CMakeLists.txt
python/docs/: Makefile  README.txt  push-to-origin-gh-pages.sh
python/docs/notebooks/: basic-tutorial.ipynb
python/docs/source/: DVIDNodeService.rst  DVIDServerService.rst  conf.py  index.rst
python/docs/source/_static/: basic-tutorial.html
python/libdvid/: __init__.py  mask_codec.py
python/libdvid/gui/: __init__.py  contents_browser.py
python/libdvid/util/: __init__.py  roi_utils.py
python/libdvid/voxels/: __init__.py  voxels_accessor.py  voxels_metadata.py
python/src/: converters.hpp  libdvid_python.cpp
python/tests/: _test_utils.py  test_connection.py  test_label_codec.py  test_mask_codec.py  test_node_service.py  test_roi_utils.py  test_voxels_accessor.py
src/: Algorithms.cpp  BinaryData.cpp  DVIDCache.cpp  DVIDConnection.cpp  DVIDException.cpp  DVIDGraph.cpp  DVIDLabelCodec.cpp  DVIDNode.cpp  DVIDNodeService.cpp  DVIDServer.cpp  DVIDServerService.cpp  DVIDThreadedFetch.cpp  Utilities.cpp
src/tools/: decode_labels.cpp  encode_labels.cpp
tests/: test_blocks.cpp  test_body.cpp  test_compression.cpp  test_grayscale.cpp  test_keyvalue.cpp  test_labelblk.cpp  test_labelgraph.cpp  test_newrepo.cpp  test_nodeconnection.cpp  test_roi.cpp
tests/inputs/: testimage.binary  tricky-label-block.npz
